Correct 'not supported' text visibility conditions

--- a/app/components/UserPageInstallAlert.module.css
+++ b/app/components/UserPageInstallAlert.module.css
@@ -17,3 +17,11 @@
     }
   }
 }
+
+.notSupportedText {
+  font-size: var(--mantine-font-size-xs);
+  opacity: 0.6;
+  line-height: 1.2;
+  min-width: 0px;
+  flex-grow: 1;
+}
